--- a/fofa.config
+++ b/fofa.config
@@ -1,5 +1,5 @@
 [config]
-fofa_email=admin@qq.com
-fofa_key=b198e86d7f27e284aa2d70612a3e665w
+fofa_email=496311111@qq.com
+fofa_key=627c0a4e86e7111baf74c731f8e77f22
 cookie=
 threads=10
